testdata/baselines/reference/submodule/compiler/jsdocPropertyTagInvalid.errors.txt
/a.js(3,15): error TS2552: Cannot find name 'sting'. Did you mean 'string'?
/a.js(6,13): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (2 errors) ====
    /**
     * @typedef MyType
     * @property {sting} [x]
                  ~~~~~
!!! error TS2552: Cannot find name 'sting'. Did you mean 'string'?
     */
    
    /** @param {MyType} p  */
                ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    export function f(p) { }
    
==== /b.js (0 errors) ====
    import { f } from "./a.js"
    f({ x: 42 })
    